--- a/src/styles/Album.module.scss
+++ b/src/styles/Album.module.scss
@@ -41,8 +41,8 @@
     gap: 1.5rem;
 
     .icon {
-      width: 30px;
-      height: 30px;
+      width: 20px;
+      height: 20px;
 
       &:hover {
         color: $secondary-color;
@@ -58,5 +58,24 @@
     padding: 10px;
     justify-content: space-between;
     border-bottom: 1px solid $secondary-color;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .Album {
+    width: 60vw;
+
+    .cover {
+      justify-content: center;
+      gap: 2rem;
+    }
+
+    .icons {
+      gap: 1rem;
+    }
+
+    .listIntro {
+      width: 60vw;
+    }
   }
 }
